--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -102,7 +102,7 @@
             style="@style/modifiedEditText"/>
 
 
-        <com.google.android.material.button.MaterialButton
+        <Button
             android:id="@+id/btnRegister"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
