--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".MainActivity"
+    tools:context=".LoginActivity"
     android:background="@drawable/login_background">
 
     <LinearLayout
@@ -69,7 +69,7 @@
             android:textStyle="italic"
             android:textColor="@color/gray_gainsboro" />
 
-        <com.google.android.material.button.MaterialButton
+        <Button
             android:id="@+id/btnLogin"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
@@ -83,6 +83,7 @@
             android:textColor="@color/cream"
             android:textSize="16sp"
             app:cornerRadius="30dp" />
+
     </LinearLayout>
 
     <TextView
