--- a/app/src/main/res/layout/task_view.xml
+++ b/app/src/main/res/layout/task_view.xml
@@ -26,7 +26,23 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/status"
+            android:id="@+id/description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="1dp"
+            android:textColor="#5d5d5d"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/ingredients"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="1dp"
+            android:textColor="#5d5d5d"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/steps"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="1dp"
