--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="cream">#F8F7F2</color>
     <color name="gray_gainsboro">#DCDCDC</color>
     <color name="dark_blue">#023a5f</color>
+    <color name="mikado_yellow">#ffc40c</color>
 </resources>
