--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,6 +45,11 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     -->
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <com.google.android.material.bottomappbar.BottomAppBar
         android:id="@+id/bottomAppBar"
         android:layout_width="match_parent"
@@ -65,11 +70,15 @@
     </com.google.android.material.bottomappbar.BottomAppBar>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/uploadBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_add"
         app:maxImageSize="50dp"
         android:backgroundTint="@color/white"
         app:layout_anchor="@id/bottomAppBar" />
+
+
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
