--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -34,7 +34,7 @@
         <LinearLayout
             android:id="@+id/infoContainer"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_height="520dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="40dp"
             android:orientation="vertical"
@@ -102,7 +102,7 @@
             <LinearLayout
                 android:id="@+id/Container"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="60dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="40dp"
                 android:orientation="horizontal"
@@ -116,15 +116,36 @@
                     android:text="Meet-up Status" />
 
                 <Button
-                    android:id="@+id/button"
+                    android:id="@+id/messageButton"
                     android:layout_width="10sp"
                     android:layout_height="wrap_content"
                     android:layout_weight="5"
                     android:text="Message" />
-
-
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/Container2"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="40dp"
+                android:orientation="horizontal"
+                android:weightSum="10">
+
+                <Button
+                    android:id="@+id/recipeProfButton"
+                    android:layout_width="10sp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="5"
+                    android:text="View   Recipes" />
+
+                <Button
+                    android:id="@+id/fitnessProfButton"
+                    android:layout_width="10sp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="5"
+                    android:text="View Workouts" />
+            </LinearLayout>
         </LinearLayout>
 
 
