Edit window bug fixes

--- a/app/src/main/res/layout/edit_profile_button.xml
+++ b/app/src/main/res/layout/edit_profile_button.xml
@@ -134,7 +134,7 @@
 
     <!--button for dismissing our dialog-->
     <Button
-        android:id="@+id/btnSubmitRecipe"
+        android:id="@+id/btnSubmitProfile"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
