--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="gray_gainsboro">#DCDCDC</color>
     <color name="dark_blue">#023a5f</color>
     <color name="mikado_yellow">#ffc40c</color>
+    <color name="neon_blue">#1F51FF</color>
 </resources>
