Edit profile UI to show hints

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -57,7 +57,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="20sp"
-                android:text="My First + Last Name"
+                android:hint="First Name, Last Name"
+                android:text=""
                 android:textFontWeight="600"
                 android:textSize="25sp" />
 
@@ -65,7 +66,8 @@
                 android:id="@+id/email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="My Email"
+                android:text=""
+                android:hint="Email"
                 android:paddingLeft="20sp"
                 android:textFontWeight="600"
                 android:textSize="25sp"
@@ -75,7 +77,8 @@
                 android:id="@+id/phone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="My Phone"
+                android:text=""
+                android:hint="Phone Number"
                 android:paddingLeft="20sp"
                 android:textFontWeight="600"
                 android:textSize="25sp"
@@ -85,7 +88,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="20sp"
-                android:text="My Address + Zipcode"
+                android:text=""
+                android:hint="Address, Zipcode"
                 android:textFontWeight="600"
                 android:textSize="25sp"
                 />
@@ -95,7 +99,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="20sp"
-                android:text="My Bio"
+                android:text=""
+                android:hint="My Bio"
                 android:textFontWeight="600"
                 android:textSize="25sp"
                 />
