Added Exercise & Food layouts plus others

--- a/app/src/main/res/layout/fragment_fitness.xml
+++ b/app/src/main/res/layout/fragment_fitness.xml
@@ -21,6 +21,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <include
+            android:id="@+id/fitnessCaloric"
             layout="@layout/layout_caloric"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
@@ -29,7 +30,43 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/fitnessToolbar" />
 
-        /
+        <include
+            android:id="@+id/fitnessBreakfast"
+            layout="@layout/layout_addfood_breakfast"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/fitnessCaloric" />
+        <include
+            android:id="@+id/fitnessLunch"
+            layout="@layout/layout_addfood_lunch"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/fitnessBreakfast" />
+        <include
+            android:id="@+id/fitnessDinner"
+            layout="@layout/layout_addfood_dinner"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/fitnessLunch" />
+        <include
+            android:id="@+id/fitnessExercises"
+            layout="@layout/layout_addexercise_exercise"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/fitnessDinner" />
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
