--- a/app/src/main/res/layout/layout_caloric.xml
+++ b/app/src/main/res/layout/layout_caloric.xml
@@ -16,13 +16,13 @@
             android:id="@+id/tvTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Calories Remaining"
-            android:fontFamily="@font/roboto_bold"
-            android:textSize="16sp"
-            android:textColor="@color/black"
-            android:padding="10dp"
+            android:layout_marginStart="5dp"
             android:layout_marginBottom="5dp"
-            android:layout_marginStart="5dp"/>
+            android:fontFamily="@font/roboto_bold"
+            android:padding="10dp"
+            android:text="Calories Remaining"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/tvGoal"
