--- a/app/src/main/res/layout/layout_add_exercise.xml
+++ b/app/src/main/res/layout/layout_add_exercise.xml
@@ -32,7 +32,7 @@
             android:layout_marginBottom="5dp">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/txtFd_Name"
+                android:id="@+id/txtEx_Name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Name"/>
@@ -96,7 +96,7 @@
 
         <!--button for dismissing our dialog-->
         <Button
-            android:id="@+id/btnSubmitFood"
+            android:id="@+id/btnSubmitExercise"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
