--- a/app/src/main/res/layout/fitness_toolbar.xml
+++ b/app/src/main/res/layout/fitness_toolbar.xml
@@ -28,7 +28,8 @@
         android:layout_marginEnd="20dp"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        />
 
     <ImageButton
         android:id="@+id/nextDayBtn"
