--- a/app/src/main/res/layout/fragment_other_profile.xml
+++ b/app/src/main/res/layout/fragment_other_profile.xml
@@ -73,6 +73,17 @@
                 />
 
             <TextView
+                android:id="@+id/username"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:hint="Username"
+                android:paddingLeft="20sp"
+                android:textFontWeight="600"
+                android:textSize="25sp"
+                />
+
+            <TextView
                 android:id="@+id/profileName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -82,16 +93,6 @@
                 android:textFontWeight="600"
                 android:textSize="25sp" />
 
-            <TextView
-                android:id="@+id/email"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:hint="Email"
-                android:paddingLeft="20sp"
-                android:textFontWeight="600"
-                android:textSize="25sp"
-                />
 
             <TextView
                 android:id="@+id/phone"
