--- a/app/src/main/res/layout/fragment_recipe_details.xml
+++ b/app/src/main/res/layout/fragment_recipe_details.xml
@@ -4,41 +4,200 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/cream"
-    tools:context=".RecipeDetailsFragment">
+    android:background="@color/black"
+    tools:context=".Recipe.RecipeDetailsFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/tvRec_Name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20sp"
-            android:fontFamily="@font/dancing_script"
-            android:paddingTop="20sp"
-            android:textColor="#116530"
-            android:textFontWeight="600"
-            android:textSize="35sp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="250dp">
 
-        <TextView
-            android:id="@+id/tvRec_Desc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20sp"
-            android:fontFamily="@font/roboto_light"
-            android:textStyle="bold"
-            android:textColor="#C0C0C0"
-            android:letterSpacing="0.05"
-            android:textSize="18sp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvRec_Name" />
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:id="@+id/collapsing_toolbar_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:contentScrim="@color/black"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                app:expandedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Expanded"
+                app:expandedTitleGravity="bottom|right"
+                app:collapsedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Collapsed"
+                android:background="@drawable/login_background">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                <ImageView
+                    android:id="@+id/expandedImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/ramen"
+                    app:layout_collapseMode="parallax"
+                    app:layout_collapseParallaxMultiplier="0.7" />
 
+                <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="70dp"
+                    app:layout_collapseMode="pin"/>
+
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            android:background="@drawable/recipe_details">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="30dp">
+
+                <TextView
+                    android:id="@+id/tvName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/dancing_script"
+                    android:text="hello there,"
+                    android:textColor="#116530"
+                    android:textFontWeight="800"
+                    android:textSize="35sp" />
+
+                <TextView
+                    android:id="@+id/tvDescription"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/dancing_script"
+                    android:text="what you want to cook today?"
+                    android:textColor="#C0C0C0"
+                    android:textSize="25sp"
+                    android:layout_below="@id/tvName" />
+
+                <TextView
+                    android:id="@+id/tvPrepTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tvDescription"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginStart="10dp"
+                    app:drawableStartCompat="@drawable/ic_clock2"
+                    android:text="45 mins"
+                    style="@style/nomralDrawable" />
+
+                <TextView
+                    android:id="@+id/tvCalories"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tvDescription"
+                    android:layout_toEndOf="@id/tvPrepTime"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginStart="50dp"
+                    app:drawableStartCompat="@drawable/ic_calories"
+                    android:text="100 kcal"
+                    style="@style/nomralDrawable" />
+
+                <TextView
+                    android:id="@+id/tvRating"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tvDescription"
+                    android:layout_marginStart="50dp"
+                    android:layout_marginTop="30dp"
+                    android:layout_toEndOf="@id/tvCalories"
+                    android:drawablePadding="5dp"
+                    android:fontFamily="@font/roboto_bold"
+                    android:text="4.0"
+                    android:textColor="@color/mikado_yellow"
+                    android:drawableRight="@drawable/ic_star"
+                    style="@style/nomralDrawable"/>
+
+
+                <TextView
+                    android:id="@+id/tvTitle1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/dancing_script"
+                    android:text="Ingredients"
+                    android:textColor="@color/black"
+                    android:textSize="25sp"
+                    android:layout_marginTop="50dp"
+                    android:layout_below="@id/tvPrepTime" />
+
+                <TextView
+                    android:id="@+id/tvTitle2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/dancing_script"
+                    android:text="Steps"
+                    android:textColor="@color/black"
+                    android:textSize="25sp"
+                    android:layout_marginTop="50dp"
+                    android:layout_below="@id/tvTitle1" />
+
+                <TextView
+                    android:id="@+id/tvTitle3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/dancing_script"
+                    android:text="Your Rating"
+                    android:textColor="@color/mikado_yellow"
+                    android:textSize="25sp"
+                    android:layout_marginTop="50dp"
+                    android:layout_below="@id/tvTitle2" />
+
+                <RatingBar
+                    android:id="@+id/rBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tvTitle2"
+                    android:layout_marginTop="53dp"
+                    android:layout_toEndOf="@+id/tvTitle3"
+                    style="?android:attr/ratingBarStyleIndicator"
+                    android:isIndicator="false"
+                    android:progressTint="#FFCC01"
+                    android:scaleX="0.8"
+                    android:scaleY="0.8"
+                    android:numStars="5"
+                    android:stepSize="0.5" />
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/commentLayout"
+                    android:layout_width="match_parent"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_below="@id/rBar">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/txtComment"
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:hint="Comment"
+                        android:gravity="top"
+                        android:fontFamily="@font/roboto_light"/>
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <Button
+                    android:id="@+id/btnRating"
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/commentLayout"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="5dp"
+                    android:backgroundTint="@color/black"
+                    android:text="Submit"
+                    android:textAllCaps="false"
+                    android:textColor="@color/cream"
+                    android:textSize="16sp"
+                    app:cornerRadius="20dp" />
+
+            </RelativeLayout>
+        </androidx.core.widget.NestedScrollView>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </FrameLayout>
