--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -53,4 +53,27 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
+    <style name="TextAppearance.App.CollapsingToolbar.Expanded"
+        parent="TextAppearance.MaterialComponents.Headline5">
+        <item name="android:textColor">"#116530"</item>
+        <item name="fontFamily">@font/dancing_script</item>
+        <item name="android:fontFamily">@font/dancing_script</item>
+        <item name="android:textSize">45sp</item>
+    </style>
+
+    <style name="TextAppearance.App.CollapsingToolbar.Collapsed"
+        parent="TextAppearance.MaterialComponents.Headline6">
+        <item name="android:textColor">"#116530"</item>
+        <item name="fontFamily">@font/dancing_script</item>
+        <item name="android:fontFamily">@font/dancing_script</item>
+        <item name="android:textSize">35sp</item>
+    </style>
+
+    <style name="nomralDrawable" parent="parent">
+        <item name="android:textSize">13sp</item>
+        <item name="android:scaleX">1.2</item>
+        <item name="android:scaleY">1.2</item>
+        <item name="android:drawablePadding">7dp</item>
+        <item name="android:fontFamily">@font/roboto_light</item>
+    </style>
 </resources>
