--- a/app/src/main/res/layout/activity_work_out_plan.xml
+++ b/app/src/main/res/layout/activity_work_out_plan.xml
@@ -5,29 +5,32 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tvHello"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20sp"
-        android:fontFamily="@font/dancing_script"
-        android:paddingTop="20sp"
-        android:text="hello there,"
-        android:textColor="#116530"
-        android:textFontWeight="600"
-        android:textSize="35sp" />
 
-    <TextView
-        android:id="@+id/tvHello2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20sp"
-        android:fontFamily="@font/roboto_light"
-        android:textStyle="bold"
-        android:text="what is your plan today?"
-        android:textColor="#C0C0C0"
-        android:letterSpacing="0.05"
-        android:textSize="18sp"/>
+        <TextView
+            android:id="@+id/tvHello"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20sp"
+            android:fontFamily="@font/dancing_script"
+            android:paddingTop="20sp"
+            android:text="hello there,"
+            android:textColor="#116530"
+            android:textFontWeight="600"
+            android:textSize="35sp" />
+
+        <TextView
+            android:id="@+id/tvHello2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20sp"
+            android:fontFamily="@font/roboto_light"
+            android:textStyle="bold"
+            android:text="what is your plan today?"
+            android:textColor="#C0C0C0"
+            android:letterSpacing="0.05"
+            android:textSize="18sp" />
+
+
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_layout"
@@ -43,5 +46,18 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/showBasket"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:layout_gravity="center|end"
+        android:layout_margin="10dp"
+        android:layout_toRightOf="@id/tvHello"
+        android:src="@drawable/ic_basket"
+        android:elevation="1dp"
+        android:backgroundTint="@color/neon_blue"
+        app:fabSize="normal" />
 
 </LinearLayout>
