--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,13 +5,139 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".FeedsFragment"
-    android:id="@+id/fragment_feeds">
+    android:id="@+id/fragment_feeds"
+    android:background="@color/black">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Profile Fragment"
-        android:textSize="25dp" />
+    <RelativeLayout
+        android:id="@+id/activity_landing"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/img_background"
+            android:layout_width="match_parent"
+            android:layout_height="180dp"
+            android:background="@color/mikado_yellow" />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile_image"
+            android:layout_below="@id/img_background"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="-100dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/bob"
+            app:civ_border_width="2dp"
+            app:civ_border_color="@color/white"/>
+
+        <TextView
+            android:id="@+id/tvUsername"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/profile_image"
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/dancing_script"
+            android:layout_centerHorizontal="true"
+            android:text="Bob the Minion"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textFontWeight="600"
+            android:textSize="35sp" />
+
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tvUsername"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal"
+            android:gravity="center">
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="50dp">
+                <TextView
+                    android:id="@+id/tvFollowers"
+                    style="@style/modifiedTextView"
+                    android:text="10k"
+                    android:textColor="@color/white"
+                    android:textSize="24sp"
+                    android:layout_marginBottom="0dp"
+                    android:layout_centerHorizontal="true" />
+
+                <TextView
+                    style="@style/modifiedLightTextView"
+                    android:text="Followers"
+                    android:layout_below="@id/tvFollowers" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="50dp">
+                <TextView
+                    android:id="@+id/tvFollowing"
+                    style="@style/modifiedTextView"
+                    android:text="1.2k"
+                    android:textColor="@color/white"
+                    android:textSize="24sp"
+                    android:layout_marginBottom="0dp"
+                    android:layout_centerHorizontal="true" />
+
+                <TextView
+                    style="@style/modifiedLightTextView"
+                    android:text="Following"
+                    android:layout_below="@id/tvFollowing" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <androidx.appcompat.widget.SwitchCompat
+                    android:id="@+id/switchMeetUp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:padding="0dp"
+                    android:thumb="@drawable/thumb"
+                    app:track="@drawable/track"
+                    android:layout_marginBottom="0dp"
+                    android:layout_centerHorizontal="true" />
+
+                <TextView
+                    style="@style/modifiedLightTextView"
+                    android:text="Meet-Up"
+                    android:layout_below="@id/switchMeetUp" />
+
+            </RelativeLayout>
+
+        </LinearLayout>
+
+        <include
+            android:id="@+id/layoutProfile"
+            layout="@layout/layout_profile"
+            android:layout_below="@id/linearLayout"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"/>
+
+        <include
+            layout="@layout/custom_tab_layout"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_below="@id/layoutProfile"
+            android:layout_margin="20dp"/>
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/pager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+
+
+    </RelativeLayout>
 </FrameLayout>
