--- a/app/src/main/res/layout/layout_plan.xml
+++ b/app/src/main/res/layout/layout_plan.xml
@@ -70,23 +70,13 @@
             android:layout_toEndOf="@id/ivExerciseImage"
             android:drawablePadding="2dp"
             android:fontFamily="@font/roboto_light" />
-        <TextView
-            android:id="@+id/tvDate"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tvWeight"
-            android:layout_marginStart="10dp"
-            android:layout_toEndOf="@id/ivExerciseImage"
-            android:drawablePadding="2dp"
-            android:fontFamily="@font/roboto_light" />
 
         <CheckBox
-            android:id="@+id/round"
+            android:id="@+id/cbRound"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_gravity="center|end"
-            android:layout_marginStart="20dp"
             android:layout_toEndOf="@id/tvSets"
             android:button="@drawable/round_checkbox"
             android:clickable="true"
