--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,6 +41,29 @@
         <item name="android:layout_marginBottom">10dp</item>
     </style>
 
+    <style name="modifiedLightTextView" parent="parent">
+        <item name="fontFamily">@font/roboto_light</item>
+        <item name="android:textColor">@color/gray_gainsboro</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="profileTextView" parent="parent">
+        <item name="fontFamily">@font/courgette</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:layout_marginStart">15dp</item>
+        <item name="android:padding">5dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="drawableStartCompat">@drawable/ic_smiley</item>
+        <item name="android:drawablePadding">20dp</item>
+        <item name="android:background">@null</item>
+    </style>
+
     <style name="modifiedNumberView" parent="parent">
         <item name="fontFamily">@font/roboto_bold</item>
         <item name="android:textColor">@color/dark_blue</item>
