--- a/app/src/main/res/layout/layout_plan.xml
+++ b/app/src/main/res/layout/layout_plan.xml
@@ -41,7 +41,7 @@
             android:textColor="@color/black"
             android:textSize="17sp" />
 
-        <!--Text VIew to display Recipe Desccription-->
+        <!--Text VIew to display Recipe Description-->
         <TextView
             android:id="@+id/tvReps"
             android:layout_width="200dp"
@@ -71,16 +71,20 @@
             android:drawablePadding="2dp"
             android:fontFamily="@font/roboto_light" />
 
-        <CheckBox
-            android:id="@+id/cbRound"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_gravity="center|end"
-            android:layout_toEndOf="@id/tvSets"
-            android:button="@drawable/round_checkbox"
-            android:clickable="true"
-            android:focusable="true" />
-
     </RelativeLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnCartFunc"
+        app:fabSize="mini"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/white"
+        app:backgroundTint="@color/black"
+        app:srcCompat="@drawable/ic_add"
+        android:layout_gravity="center|end"
+        app:borderWidth="2dp"
+        app:maxImageSize="18dp"
+        app:tint="@color/black"
+        android:layout_marginEnd="10dp"/>
+
 </androidx.cardview.widget.CardView>
