--- a/app/src/main/res/layout/edit_profile_button.xml
+++ b/app/src/main/res/layout/edit_profile_button.xml
@@ -5,8 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
-
     <!--text view for displaying course tracks-->
     <TextView
         android:layout_width="match_parent"
@@ -18,7 +16,6 @@
         android:fontFamily="@font/roboto_bold"
         android:textColor="@color/black"
         android:textSize="25sp" />
-
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -26,13 +23,11 @@
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="5dp">
-
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editProfile_first"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="First Name"/>
-
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -42,13 +37,11 @@
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="5dp">
-
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editProfile_last"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Last Name"/>
-
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -58,13 +51,11 @@
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="5dp">
-
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editProfile_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Username"/>
-
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -74,15 +65,12 @@
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="5dp">
-
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editProfile_phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Phone Number"/>
-
     </com.google.android.material.textfield.TextInputLayout>
-
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -90,13 +78,11 @@
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="5dp">
-
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editProfile_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Address"/>
-
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -106,13 +92,11 @@
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="5dp">
-
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editProfile_zip"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Zipcode" />
-
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -122,16 +106,12 @@
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="5dp">
-
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editProfile_bio"
+            android:id="@+id/editProfileBio"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="About you"/>
-
     </com.google.android.material.textfield.TextInputLayout>
-
-
     <!--button for dismissing our dialog-->
     <Button
         android:id="@+id/btnSubmitProfile"
