--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,144 +6,136 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".FeedsFragment"
     android:id="@+id/fragment_feeds"
-    android:background="@color/cream"
-    >
+    android:background="@color/black">
 
-    <!-- TODO: Update blank fragment layout -->
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <RelativeLayout
+        android:id="@+id/activity_landing"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ImageView
+            android:id="@+id/img_background"
+            android:layout_width="match_parent"
+            android:layout_height="180dp"
+            android:background="@color/mikado_yellow" />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile_image"
+            android:layout_below="@id/img_background"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="-100dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/bob"
+            app:civ_border_width="2dp"
+            app:civ_border_color="@color/white"/>
+
         <TextView
-            android:id="@+id/profileTitle"
+            android:id="@+id/tvUsername"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20sp"
+            android:layout_below="@id/profile_image"
+            android:layout_marginTop="5dp"
             android:fontFamily="@font/dancing_script"
-            android:paddingTop="20sp"
-            android:text="My Profile"
-            android:textColor="#116530"
+            android:layout_centerHorizontal="true"
+            android:text="Bob the Minion"
+            android:textAlignment="center"
+            android:textColor="@color/white"
             android:textFontWeight="600"
-            android:textSize="35sp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
+            android:textSize="35sp" />
 
         <LinearLayout
-            android:id="@+id/infoContainer"
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
-            android:layout_height="520dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="40dp"
-            android:orientation="vertical"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profileTitle">
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tvUsername"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal"
+            android:gravity="center">
 
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="430px"
-                android:layout_height="420px"
-                tools:layout_editor_absoluteX="12dp"
-                tools:layout_editor_absoluteY="118dp"
-                tools:src="@drawable/fitshare"
-                android:layout_gravity="center"
-                />
-
-            <TextView
-                android:id="@+id/profileName"
+            <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="20sp"
-                android:hint="First Name, Last Name"
-                android:text=""
-                android:textFontWeight="600"
-                android:textSize="25sp" />
+                android:layout_marginEnd="50dp">
+                <TextView
+                    android:id="@+id/tvFollowers"
+                    style="@style/modifiedTextView"
+                    android:text="10k"
+                    android:textColor="@color/white"
+                    android:textSize="24sp"
+                    android:layout_marginBottom="0dp"
+                    android:layout_centerHorizontal="true" />
 
-            <TextView
-                android:id="@+id/email"
+                <TextView
+                    style="@style/modifiedLightTextView"
+                    android:text="Followers"
+                    android:layout_below="@id/tvFollowers" />
+            </RelativeLayout>
+
+            <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=""
-                android:hint="Email"
-                android:paddingLeft="20sp"
-                android:textFontWeight="600"
-                android:textSize="25sp"
-                />
+                android:layout_marginEnd="50dp">
+                <TextView
+                    android:id="@+id/tvFollowing"
+                    style="@style/modifiedTextView"
+                    android:text="1.2k"
+                    android:textColor="@color/white"
+                    android:textSize="24sp"
+                    android:layout_marginBottom="0dp"
+                    android:layout_centerHorizontal="true" />
 
-            <TextView
-                android:id="@+id/phone"
+                <TextView
+                    style="@style/modifiedLightTextView"
+                    android:text="Following"
+                    android:layout_below="@id/tvFollowing" />
+            </RelativeLayout>
+
+            <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:hint="Phone Number"
-                android:paddingLeft="20sp"
-                android:textFontWeight="600"
-                android:textSize="25sp"
-                />
-            <TextView
-                android:id="@+id/address"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="20sp"
-                android:text=""
-                android:hint="Address, Zipcode"
-                android:textFontWeight="600"
-                android:textSize="25sp"
-                />
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/bio"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="20sp"
-                android:text=""
-                android:hint="My Bio"
-                android:textFontWeight="600"
-                android:textSize="25sp"
-                />
-            <LinearLayout
-                android:id="@+id/Container"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="40dp"
-                android:orientation="horizontal"
-                android:weightSum="10">
+                <androidx.appcompat.widget.SwitchCompat
+                    android:id="@+id/switchMeetUp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:padding="0dp"
+                    android:thumb="@drawable/thumb"
+                    app:track="@drawable/track"
+                    android:layout_marginBottom="0dp"
+                    android:layout_centerHorizontal="true" />
 
-                <CheckBox
-                    android:id="@+id/meetUp"
-                    android:layout_width="10sp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="5"
-                    android:text="Meet-up Status" />
+                <TextView
+                    style="@style/modifiedLightTextView"
+                    android:text="Meet-Up"
+                    android:layout_below="@id/switchMeetUp" />
 
-                <Button
-                    android:id="@+id/other_profile_button"
-                    android:layout_width="10sp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="5"
-                    android:text="View Other Profile">
-                </Button>
+            </RelativeLayout>
 
-            </LinearLayout>
         </LinearLayout>
 
+        <include
+            android:id="@+id/layoutProfile"
+            layout="@layout/layout_profile"
+            android:layout_below="@id/linearLayout"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <include
+            layout="@layout/custom_tab_layout"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_below="@id/layoutProfile"
+            android:layout_margin="20dp"/>
 
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/pager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/btnEditProfile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_edit_pencil"
-        app:maxImageSize="50dp"
-        android:backgroundTint="@color/white"
-        android:layout_gravity="right"
-        android:layout_marginBottom="100dp"
-        />
-
+    </RelativeLayout>
 </FrameLayout>
